added faq support for reviews

--- a/src/AppBundle/Resources/views/Reviews/reviews.html.twig
+++ b/src/AppBundle/Resources/views/Reviews/reviews.html.twig
@@ -47,7 +47,7 @@
 				</a>
 			</div>
 			<div class="review-content">
-				<div class="review-text">
+				<div class="review-text2">
 					<img src="/web/bundles/cards/{{ review.card.code }}.jpg" alt="{{ review.card.name }}" class="pull-right" style="width:120px;margin:0 0 10px 10px" onerror="this.onerror=null;this.src='/web/bundles/cards/{{ review.card.code }}.png';">
 					{{ review.textHtml|raw }}
 				</div>
