Fix discrepancy to re-enable merging

--- a/src/AppBundle/Resources/views/Reviews/reviews.html.twig
+++ b/src/AppBundle/Resources/views/Reviews/reviews.html.twig
@@ -53,7 +53,7 @@
     				</div>
 					<article class="review" data-id="{{ review.id }}" id="review-{{ review.id }}">
 						<div class="review-content">
-							<div class="review-text">
+							<div class="review-text2">
 								<img src="/web/bundles/cards/{{ review.card.code }}.jpg" alt="{{ review.card.name }}" class="pull-right review-img" style="width:120px;margin:0 0 10px 10px" onerror="this.onerror=null;this.src='/web/bundles/cards/{{ review.card.code }}.png';">
 								{{ review.textHtml|raw }}
 							</div>
