added "free" icon, I called it fast :P

--- a/src/AppBundle/Resources/public/css/icons.css
+++ b/src/AppBundle/Resources/public/css/icons.css
@@ -27,7 +27,7 @@
 .icon-reaction:before {
 	content: "!";
 }
-.icon-fast:before {
+.icon-fast:before, .icon-free:before {
 	content: "j";
 }
 .icon-eldersign:before, .icon-elder_sign:before {
