--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -3,7 +3,7 @@
 	<div class="col-md-12 text-right" style="margin-bottom:10px">
     <button class="btn btn-default btn-xs" type="button" id="filter-text-button">Filter help</button>
     <div class="btn-group">
-		<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">Sets <span class="caret"></span></button>
+		<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">Pack Filter <span class="caret"></span></button>
 		<ul class="dropdown-menu pull-right" data-filter="pack_code" title="Shift+Click to select only one option ; Alt+Shift+Click to select all other options"></ul>
 	</div>
 		<div class="btn-group">
@@ -14,8 +14,6 @@
 				<li><a href="#"><label><input type="radio" name="display-column" value="1"> Display on 1 column</label></a></li>
 				<li><a href="#"><label><input type="radio" name="display-column" value="2"> Display on 2 columns</label></a></li>
 				<li><a href="#"><label><input type="radio" name="display-column" value="3"> Display on 3 columns</label></a></li>
-				<li><a href="#"><label><input type="radio" name="core-set" value="1"> Use 1 Core Set</label></a></li>
-				<li><a href="#"><label><input type="radio" name="core-set" value="2"> Use 2 Core Sets</label></a></li>
 				<li><a href="#"><label><input type="radio" name="show-suggestions" value="0"> Show no suggestion</label></a></li>
 				<li><a href="#"><label><input type="radio" name="show-suggestions" value="3"> Show 3 suggestions</label></a></li>
 				<li><a href="#"><label><input type="radio" name="show-suggestions" value="10"> Show 10 suggestions</label></a></li>
