--- a/src/AppBundle/Resources/views/Search/card-props.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-props.html.twig
@@ -31,7 +31,7 @@
 {% elseif card.type_code == 'enemy' %}
 	<div>
 	Fight: {{ macros.integer_or_x(card.enemy_fight) }}.
-	Health: {{ macros.integer_or_x(card.health) }}.
+	Health: {{ macros.integer_or_x(card.health) }}{% if card.health_per_investigator %}<span class="icon icon-per_investigator"></span>{% endif %}.
 	Evade: {{ macros.integer_or_x(card.enemy_evade) }}.
 	</div>
 	<div>
@@ -43,7 +43,7 @@
 	<div>
 	{% if card.doom %}<span title="Doom" class="icon icon-doom color-doom"></span>Doom: {{card.doom}}.{% endif %}
 	{% if card.shroud %}<span title="Shroud" class="icon icon-shroud color-shroud"></span>Shroud: {{card.shroud}}.{% endif %}
-	{% if card.clues %}<span title="Clues" class="icon icon-clues color-clues"></span>Clues: {{card.clues}} <span class="icon icon-per_investigator" title="Per Investigator"></span>.{% endif %}
+	{% if card.clues %}<span title="Clues" class="icon icon-clues color-clues"></span>Clues: {{card.clues}}{% if not card.clues_fixed %}<span class="icon icon-per_investigator" title="Per Investigator"></span>{% endif %}.{% endif %}
 	{% if card.clues == 0 %}<span title="Clues" class="icon icon-clues color-clues"></span>Clues: {{card.clues}}{% endif %}
 	</div>
 	{% endif %}
