--- a/src/AppBundle/Resources/views/Search/display-list.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-list.html.twig
@@ -33,16 +33,16 @@
 	{% if card.skill_combat %}{{ card.skill_combat }}<span title="Combat" class="icon icon-combat color-combat"></span>{% endif %}
 	{% if card.skill_agility %}{{ card.skill_agility }}<span title="Agility" class="icon icon-agility color-agility"></span>{% endif %}
 	{% elseif card.type_code == "enemy" %}
-	{% if card.enemy_fight %}{{ card.enemy_fight }}<span title="Combat" class="icon icon-strength color-strength"></span>{% endif %}
-	{% if card.health %}Health:{{ card.health }}<span title="Health" class="icon icon-health color-health"></span>{% endif %}
-	{% if card.enemy_evade %}{{ card.enemy_evade }}<span title="Agility" class="icon icon-agility color-agility"></span>{% endif %}
+	{% if card.enemy_fight %}<b>Fight</b>: {{ card.enemy_fight }}{% endif %}
+	{% if card.health %}<b>Health</b>:{{ card.health }}{% if card.health_per_investigator %}<span class="icon icon-per_investigator"></span>{% endif %}{% endif %}
+	{% if card.enemy_evade %}<b>Evade</b>: {{ card.enemy_evade }}{% endif %}
 	{% elseif card.type_code == "location" %}
-	{% if card.shroud %}Shroud: {{ card.shroud }}<span title="Shroud" class="icon icon-shroud color-shroud"></span>{% endif %}
-	{% if card.clues %}Clues: {{ card.clues }}<span title="Clues" class="icon icon-clues color-clues"></span>{% endif %}	
+	{% if card.shroud %}<b>Shroud</b>: {{ card.shroud }}<span title="Shroud" class="icon icon-shroud color-shroud"></span>{% endif %}
+	{% if card.clues %}<b>Clues</b>: {{ card.clues }}<span title="Clues" class="icon icon-clues color-clues"></span>{% endif %}	
 	{% elseif card.type_code == "agenda" %}
-	{% if card.doom %}Doom: {{ card.doom }}<span title="Doom" class="icon icon-doom color-doom"></span>{% endif %}
+	{% if card.doom %}<b>Doom</b>: {{ card.doom }}<span title="Doom" class="icon icon-doom color-doom"></span>{% endif %}
 	{% elseif card.type_code == "act" %}
-	{% if card.clues %}Clues: {{ card.clues }}<span title="Clues" class="icon icon-clues color-clues"></span>{% endif %}	
+	{% if card.clues %}<b>Clues</b>: {{ card.clues }}<span title="Clues" class="icon icon-clues color-clues"></span>{% endif %}	
 	{% else %}
 	{% if card.skill_willpower %}{% for i in 1..card.skill_willpower %}<span title="Willpower" class="icon icon-willpower color-willpower"></span>{% endfor %}{% endif %}
 	{% if card.skill_intellect %}{% for i in 1..card.skill_intellect %}<span title="Intellect" class="icon icon-intellect color-intellect"></span>{% endfor %}{% endif %}
@@ -52,7 +52,7 @@
 	{% endif %}
 	</td>
 	<td data-th="Traits">{{ card.traits }}</td>
-	<td data-th="Set">{{ card.pack_name }} {{ card.position }}{% if card.encounter_code is defined %} - {{card.encounter_name}} {% if card.encounter_position %}{{card.encounter_position}}{% if card.quantity > 1 %}-{{card.encounter_position+card.quantity-1}}{% endif %}{% endif %}{% endif %}</td>
+	<td data-th="Set">{{ card.pack_name }} {{ card.position }}{% if card.encounter_code is defined %} - <a href="/find?q=m:{{card.encounter_code}}&sort=set&view=list&decks=encounter">{{card.encounter_name}}</a> {% if card.encounter_position %}{{card.encounter_position}}{% if card.quantity > 1 %}-{{card.encounter_position+card.quantity-1}}{% endif %}{% endif %}{% endif %}</td>
 </tr>
 {% endfor %}
 </table>
