--- a/src/AppBundle/Resources/public/css/icons.css
+++ b/src/AppBundle/Resources/public/css/icons.css
@@ -91,6 +91,21 @@
 
 }
 
+.spoiler {
+	background-color : #dfdfdf;
+	color : #dfdfdf!important;
+}
+.spoiler a, .spoiler div {
+	color : #dfdfdf!important;
+}
+
+.spoiler img {
+
+	filter: url(blur.svg#blur);
+	-webkit-filter: blur(3px);
+	filter: blur(3px);
+	filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='3');
+}
 
 
 .color-will, .color-willpower {
