--- a/src/AppBundle/Resources/views/Search/card-flavor.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-flavor.html.twig
@@ -1,3 +1,3 @@
-<div class="card-flavor small">
+<div class="card-flavor small{% if card.spoiler is defined and not show_spoilers %} spoiler{% endif %}">
 	{{ card.flavor|raw|nl2br }}
 </div>
