add check for limit

--- a/src/AppBundle/Resources/views/Builder/directimport.html.twig
+++ b/src/AppBundle/Resources/views/Builder/directimport.html.twig
@@ -40,6 +40,7 @@
   </div>
   <input type="hidden" name="faction_code">
   <input type="hidden" name="content">
+  <input type="hidden" name="problem">
   <button id="btn-save" type="submit" class="btn btn-success">Save the deck</button>
 </form>
 </div>
