Update schema.org info for ArkhamDB.

--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -50,10 +50,10 @@
 {
    "@context": "http://schema.org",
    "@type": "WebSite",
-   "url": "https://thronesdb.com/",
+   "url": "https://arkhamdb.com/",
    "potentialAction": {
      "@type": "SearchAction",
-     "target": "http://thronesdb.com/find/?q={search_term_string}",
+     "target": "http://arkhamdb.com/find?q={search_term_string}",
      "query-input": "required name=search_term_string"
    }
 }
