--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -1091,7 +1091,7 @@
 
 </ul>
 
-<h2 style="color:red">Exile (added in The Dunwich Legacy)</h2>
+<h2 style="color:red">Exile (added in <em>The Dunwich Legacy</em>)</h2>
 
 <p>Some player cards in <em>The Dunwich Legacy</em> cycle must be exiled when they are used. When a card is exiled, it is removed from the game and returned to your collection. During campaign play, a card that has been exiled must be purchased again with experience points (between scenarios) if you wish to re-include it in your deck. If exiling 1 or more cards would reduce your deck below your investigator's deck size, when purchasing cards between scenarios, you must purchase cards so that a legal deck size is maintained (when purchasing cards in this manner, you may purchase level 0 cards for 0 experience cost until a legal deck size is reached).</p>
 
