first version of linked cards. does not search linked cards (yet)

--- a/src/AppBundle/Resources/views/Search/card-front.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-front.html.twig
@@ -1,3 +1,4 @@
+
 <div class="col-sm-7">
 	<div>
 		<div class="panel panel-default border-{{ card.faction_code }}">
@@ -31,3 +32,10 @@
 		{% endif %}
 	</div>
 </div>
+
+{% block cardbackblock %} 
+{% if card.linked_card is defined %}
+{% set card = card.linked_card %}
+{% include 'AppBundle:Search:card-front.html.twig' %}
+{% endif %}
+{% endblock %}
