fixed illustrator search

--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -322,9 +322,9 @@
 <div class="row">
     <div class="col-sm-6">
         <div class="form-group">
-			<label for="i">Illustrator</label>
+			<label for="l">Illustrator</label>
 			<div>
-				<select class="form-control" name="i" id="i"><option value="">any</option>{% for illustrator in illustrators %}<option value="{{ illustrator }}">{{ illustrator }}</option>{% endfor %}</select>
+				<select class="form-control" name="l" id="l"><option value="">any</option>{% for illustrator in illustrators %}<option value="{{ illustrator }}">{{ illustrator }}</option>{% endfor %}</select>
 			</div>
 		</div>
     </div>
