--- a/src/AppBundle/Resources/views/Search/display-scan.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-scan.html.twig
@@ -9,7 +9,7 @@
 {% if index in cards|keys %}
 {% set card = cards[index] %}
 <div class="col-sm-3{% if card.spoiler is defined and not show_spoilers %} spoiler{% endif %}" style="margin-bottom:30px">
-	<a href="{{ card.url }}" class="no-popup"><img src="{{ card.imagesrc }}" alt="{{ card.name }}" style="width:100%" class="img-responsive card-view-image"></a>
+	<a href="{{ card.url }}" class="no-popup"><img src="{{ card.imagesrc }}" alt="{{ card.name }}" style="width:100%" class="img-responsive img-vertical-card"></a>
 </div>
 {% endif %}
 {% endfor %}
