--- a/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
@@ -27,17 +27,19 @@
 		<li><a href="#" id="btn-export-plaintext">plain text</a></li>
 	</ul>
 </div>
+#}
 <div class="btn-group">
 	<button type="button" class="btn btn-sm btn-default dropdown-toggle " data-toggle="dropdown">
 		<span class="fa fa-sort"></span> <span class="hidden-xs">Sort</span> <span class="caret"></span>
 	</button>
 	<ul class="dropdown-menu" role="menu" id="menu-sort">
-		<li><a href="#" id="btn-sort-type">by Type</a></li>
-		<li><a href="#" id="btn-sort-position">by Set</a></li>
-		<li><a href="#" id="btn-sort-faction">by Faction</a></li>
-		<li><a href="#" id="btn-sort-name">by Name</a></li>
+		<li><a href="#" onclick="app.deck.change_sort('default')" id="btn-sort-default">by Type</a></li>
+		<li><a href="#" onclick="app.deck.change_sort('name')" id="btn-sort-name">by Name</a></li>
+		<li><a href="#" onclick="app.deck.change_sort('set')" id="btn-sort-position">by Set</a></li>
+		<li><a href="#" onclick="app.deck.change_sort('faction')" id="btn-sort-faction">by Faction</a></li>
 	</ul>
 </div>
+{#
 <button type="button" id="btn-compare" class="btn btn-sm btn-default">
 	<span class="fa fa-duplicate"></span> <span class="hidden-xs">Compare</span>
 </button>
