added more sorting added sorting to deck edit page

--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -1,11 +1,27 @@
 
 <div class="row" id="global_filters">
+	
 	<div class="col-md-12 text-right" style="margin-bottom:10px">
-    <button class="btn btn-default btn-xs" type="button" id="filter-text-button">Filter help</button>
+    <div class="btn-group">
+			<button type="button" class="btn btn-xs btn-default dropdown-toggle " data-toggle="dropdown">
+				<span class="fa fa-sort"></span> <span class="hidden-xs">Sort Deck</span> <span class="caret"></span>
+			</button>
+			<ul class="dropdown-menu" role="menu" id="menu-sort">
+				<li><a href="#" onclick="app.deck.change_sort('default')" id="btn-sort-default">by Type</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('name')" id="btn-sort-name">by Name</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('set')" id="btn-sort-position">by Set, then Name</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('setnumber')" id="btn-sort-position">by Set, then Number</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('faction')" id="btn-sort-faction">by Faction, then Name</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('factionnumber')" id="btn-sort-faction">by Faction, then Number</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('number')" id="btn-sort-faction">by Card Number</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('xp')" id="btn-sort-faction">by XP</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('cost')" id="btn-sort-faction">by Cost</a></li>
+			</ul>
+		</div>    
     <div class="btn-group">
 		<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">Pack Filter <span class="caret"></span></button>
 		<ul class="dropdown-menu pull-right" data-filter="pack_code" title="Shift+Click to select only one option ; Alt+Shift+Click to select all other options"></ul>
-	</div>
+		</div>
 		<div class="btn-group">
 			<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">Options <span class="caret"></span></button>
 			<ul class="dropdown-menu pull-right" id="config-options">
@@ -21,6 +37,7 @@
 				<li><a href="#"><label><input type="radio" name="buttons-behavior" value="exclusive"> Class/type exclusive</label></a></li>
 			</ul>
 		</div><!-- /.btn-group -->
+		<button class="btn btn-default btn-xs" type="button" id="filter-text-button">Filter help</button>
 	</div><!-- /.col-sm-6 -->
 </div><!-- /.row -->
 
