--- a/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
@@ -35,8 +35,13 @@
 	<ul class="dropdown-menu" role="menu" id="menu-sort">
 		<li><a href="#" onclick="app.deck.change_sort('default')" id="btn-sort-default">by Type</a></li>
 		<li><a href="#" onclick="app.deck.change_sort('name')" id="btn-sort-name">by Name</a></li>
-		<li><a href="#" onclick="app.deck.change_sort('set')" id="btn-sort-position">by Set</a></li>
-		<li><a href="#" onclick="app.deck.change_sort('faction')" id="btn-sort-faction">by Faction</a></li>
+		<li><a href="#" onclick="app.deck.change_sort('set')" id="btn-sort-position">by Set, then Name</a></li>
+		<li><a href="#" onclick="app.deck.change_sort('setnumber')" id="btn-sort-position">by Set, then Number</a></li>
+		<li><a href="#" onclick="app.deck.change_sort('faction')" id="btn-sort-faction">by Faction, then Name</a></li>
+		<li><a href="#" onclick="app.deck.change_sort('factionnumber')" id="btn-sort-faction">by Faction, then Number</a></li>
+		<li><a href="#" onclick="app.deck.change_sort('number')" id="btn-sort-faction">by Card Number</a></li>
+		<li><a href="#" onclick="app.deck.change_sort('xp')" id="btn-sort-faction">by XP</a></li>
+		<li><a href="#" onclick="app.deck.change_sort('cost')" id="btn-sort-faction">by Cost</a></li>
 	</ul>
 </div>
 {#
