adjust xp sort add faction then xp

--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -25,16 +25,16 @@
 		<div class="btn-group">
 			<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">Options <span class="caret"></span></button>
 			<ul class="dropdown-menu pull-right" id="config-options">
-				<li><a href="#"><label><input type="checkbox" name="show-unusable"> Show unusable cards</label></a></li>
-				<li><a href="#"><label><input type="checkbox" name="show-only-deck"> Show only used cards</label></a></li>
-				<li><a href="#"><label><input type="radio" name="display-column" value="1"> Display on 1 column</label></a></li>
-				<li><a href="#"><label><input type="radio" name="display-column" value="2"> Display on 2 columns</label></a></li>
-				<li><a href="#"><label><input type="radio" name="display-column" value="3"> Display on 3 columns</label></a></li>
-				<li><a href="#"><label><input type="radio" name="show-suggestions" value="0"> Show no suggestion</label></a></li>
-				<li><a href="#"><label><input type="radio" name="show-suggestions" value="3"> Show 3 suggestions</label></a></li>
-				<li><a href="#"><label><input type="radio" name="show-suggestions" value="10"> Show 10 suggestions</label></a></li>
-				<li><a href="#"><label><input type="radio" name="buttons-behavior" value="cumulative"> Class/type cumulative</label></a></li>
-				<li><a href="#"><label><input type="radio" name="buttons-behavior" value="exclusive"> Class/type exclusive</label></a></li>
+				<li><a href="#" onclick="app.deck.change_sort('default')" id="btn-sort-default">by Type</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('name')" id="btn-sort-name">by Name</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('set')" id="btn-sort-position">by Set, then Name</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('setnumber')" id="btn-sort-position">by Set, then Number</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('faction')" id="btn-sort-faction">by Faction, then Name</a></li>		
+				<li><a href="#" onclick="app.deck.change_sort('factionnumber')" id="btn-sort-faction">by Faction, then Number</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('factionxp')" id="btn-sort-faction">by Faction, then XP</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('number')" id="btn-sort-faction">by Card Number</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('xp')" id="btn-sort-faction">by XP</a></li>
+				<li><a href="#" onclick="app.deck.change_sort('cost')" id="btn-sort-faction">by Cost</a></li>
 			</ul>
 		</div><!-- /.btn-group -->
 		<button class="btn btn-default btn-xs" type="button" id="filter-text-button">Filter help</button>
