--- a/src/AppBundle/Resources/views/Export/octgn.xml.twig
+++ b/src/AppBundle/Resources/views/Export/octgn.xml.twig
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <deck game="a6d114c7-2e2a-4896-ad8c-0330605c90bf" sleeveid="0">
   <section name="Investigator" shared="False">
-    <card qty="1" id="{{ deck.investigator.octgnId }}">{{ deck.investigator.name }}</card>
+    <card qty="1" id="{{ deck.investigator.getOctgnId(1) }}">{{ deck.investigator.name }}</card>
+    <card qty="1" id="{{ deck.investigator.getOctgnId(2) }}">{{ deck.investigator.name }}</card>
   </section>
   <section name="Asset" shared="False">
 {% for slot in deck.slots_by_type.asset %}
@@ -19,10 +20,10 @@
 {% endfor %}
   </section>
   <section name="Weakness" shared="False">
-{% for slot in deck.slots_by_type.treachery %}
+{% for slot in deck.basicweakness %}
     <card qty="{{ slot.quantity }}" id="{{ slot.card.octgnId }}">{{ slot.card.name }}</card>
 {% endfor %}
-{% for slot in deck.slots_by_type.enemy %}
+{% for slot in deck.weakness %}
     <card qty="{{ slot.quantity }}" id="{{ slot.card.octgnId }}">{{ slot.card.name }}</card>
 {% endfor %}
   </section>
