added decklist history added xp pips added deck tags for decklists

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -47,6 +47,11 @@ body {
 	/* en dash followed by non-breaking zero-width space */
 	content: "\2013\FEFF";
 }
+.card-xp {
+	font-weight : bold;
+	font-size : 16px;
+	vertical-align : middle;
+}
 .victory {
 	font-weight : bold;
 }
