--- a/src/AppBundle/Resources/views/Decklist/decklist_edit.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist_edit.html.twig
@@ -2,16 +2,18 @@
 {% import "AppBundle::macros.html.twig" as macros %}
 
 {% block javascripts %}
-	{% javascripts '@AppBundle/Resources/public/js/ui.decklist_edit.js' %}
+	{% javascripts '@AppBundle/Resources/public/js/ui.decklist_edit.js' '@AppBundle/Resources/public/js/app.deck_upgrades.js' %}
 	<script src="{{ asset_url }}"></script>
 	{% endjavascripts %}
 	<script type="text/javascript">
 	app.deck.init({{ decklist|json_encode|raw }});
+	app.deck_upgrades && app.deck_upgrades.init({{ decklist.upgrades|json_encode|raw }});
 	</script>
 {% endblock %}
 
 {% block body %}
 <div class="main white container">
+	
 	<div class="row">
 		<div class="col-sm-9">
 			<form action="{{ url|raw }}" method="post" enctype="application/x-www-form-urlencoded">
@@ -40,6 +42,22 @@
 			</form>
 		</div>
 		<div class="col-sm-3">
+			<div class="btn-group pull-right">
+				<button type="button" class="btn btn-xs btn-default dropdown-toggle " data-toggle="dropdown">
+					<span class="fa fa-sort"></span> <span class="hidden-xs">Sort Deck</span> <span class="caret"></span>
+				</button>
+				<ul class="dropdown-menu" role="menu" id="menu-sort">
+					<li><a href="#" onclick="app.deck.change_sort('default')" id="btn-sort-default">by Type</a></li>
+					<li><a href="#" onclick="app.deck.change_sort('name')" id="btn-sort-name">by Name</a></li>
+					<li><a href="#" onclick="app.deck.change_sort('set')" id="btn-sort-position">by Set, then Name</a></li>
+					<li><a href="#" onclick="app.deck.change_sort('setnumber')" id="btn-sort-position">by Set, then Number</a></li>
+					<li><a href="#" onclick="app.deck.change_sort('faction')" id="btn-sort-faction">by Faction, then Name</a></li>
+					<li><a href="#" onclick="app.deck.change_sort('factionnumber')" id="btn-sort-faction">by Faction, then Number</a></li>
+					<li><a href="#" onclick="app.deck.change_sort('number')" id="btn-sort-faction">by Card Number</a></li>
+					<li><a href="#" onclick="app.deck.change_sort('xp')" id="btn-sort-faction">by XP</a></li>
+					<li><a href="#" onclick="app.deck.change_sort('cost')" id="btn-sort-faction">by Cost</a></li>
+				</ul>
+			</div>
 			<div id="decklist" class="small"></div>
 		</div>
 	</div>
