--- a/src/AppBundle/Resources/views/Modale/upgrade.html.twig
+++ b/src/AppBundle/Resources/views/Modale/upgrade.html.twig
@@ -16,6 +16,14 @@
 							<label for="upgrade_xp">Enter the XP you earned from the scenario</label>
 							<input class="form-control" type="text" name="xp" id="upgrade_xp" placeholder="XP">
 						</div>
+						<div class="form-group">
+							<label>Exiled Cards</label>
+							<div id="upgrade-exile-list">
+								<ul>
+									<li>None</li>
+								</ul>
+							</div>
+						</div>
 						<div class="pull-right">
 							<input type="hidden" name="upgrade_deck" id="upgrade_deck">
 							<button type="submit" class="btn btn-success" onclick="$('#upgradeModal').modal('hide');app.ui.upgrade_process(event)">Upgrade</button>
